@@ -32,6 +32,9 @@ end
 desc 'generate an updated gemspec'
 task :gemspec do
   gemspec = <<-OUT
+# Don't modify larch.gemspec directly! This file is auto-generated by a Rake
+# task.
+
 Gem::Specification.new do |s|
   s.name     = 'larch'
   s.summary  = 'Larch syncs messages from one IMAP server to another. Awesomely.'
@@ -56,6 +59,7 @@ Gem::Specification.new do |s|
     'lib/larch.rb',
     'lib/larch/errors.rb',
     'lib/larch/imap.rb',
+    'lib/larch/imap/mailbox.rb',
     'lib/larch/logger.rb',
     'lib/larch/version.rb'
   ]
