@@ -1,6 +1,5 @@
 Larch Todo
 
-* --dry-run option
 * Recursive folder copy
 * Option to use a config file instead of command-line args
 * Option to delete messages from source after syncing, or if they already exist
