@@ -31,7 +31,7 @@ EOS
     opt :to_user,          "Destination server username (default: prompt)", :short => :none, :type => :string
 
     text "\nGeneral Options:"
-    # opt :dry_run,          "Don't actually do anything.", :short => '-n'
+    opt :dry_run,          "Don't actually make any changes.", :short => '-n'
     opt :fast_scan,        "Use a faster (but less accurate) method to scan mailboxes. This may result in messages being re-copied.", :short => :none
     opt :max_retries,      "Maximum number of times to retry after a recoverable error", :short => :none, :default => 3
     opt :no_create_folder, "Don't create destination folders that don't already exist", :short => :none
@@ -78,6 +78,7 @@ EOS
   Net::IMAP.debug = true if @log.level == :insane
 
   imap_from = Larch::IMAP.new(uri_from,
+      :dry_run     => options[:dry_run],
       :fast_scan   => options[:fast_scan],
       :max_retries => options[:max_retries],
       :ssl_certs   => options[:ssl_certs] || nil,
@@ -85,7 +86,8 @@ EOS
   )
 
   imap_to = Larch::IMAP.new(uri_to,
-      :create_mailbox => !options[:no_create_folder],
+      :create_mailbox => !options[:no_create_folder] && !options[:dry_run],
+      :dry_run        => options[:dry_run],
       :fast_scan      => options[:fast_scan],
       :max_retries    => options[:max_retries],
       :ssl_certs      => options[:ssl_certs] || nil,
